--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,7 @@ jobs:
           submodules: recursive
 
       - name: Install Foundry
-        run: |
-          make install-foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
       - name: Install Dependencies
         run: |
